--- a/css/styles.css
+++ b/css/styles.css
@@ -1078,6 +1078,7 @@ input::placeholder {
     .main-img {
         width: 428px;
         height: 432px;
+        width: 100%;
     }
 
     .orderservice {
@@ -1086,6 +1087,7 @@ input::placeholder {
         gap: 58px;
         width: 428px;
         height: 432px;
+        width: 100%;
     }
 
     .button {
@@ -1113,11 +1115,12 @@ input::placeholder {
     /* products */
 
     .img-section {
-        min-width: 428px;
+        max-width: 428px;
         padding-top: 96px;
         padding-bottom: 96px;
         display: block;
         box-sizing: border-box;
+        width: 100%;
     }
 
     .container-prod {
@@ -1180,6 +1183,7 @@ input::placeholder {
         display: flex;
         flex-direction: column;
         gap: 72px 24px;
+        margin: auto;
     }
 
     .li-team {
@@ -1268,12 +1272,39 @@ input::placeholder {
     }
 }
 
-@media screen and (max-width: 428px) {
-    .container-tablet {
+@media screen and (max-width: 768px) {
+
+    .container {
         max-width: 768px;
+    }
+
+    .team {
+        max-width: 768px;
+        display: block;
     }
 
     .img {
         display: none;
+    }
+
+    .container-products {
+        display: none;
+    }
+
+    .list-team {
+        display: inline-flex;
+        padding-bottom: 0px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 32px;
+    }
+
+    .footer__inner {
+        flex-direction: column;
+    }
+
+    .soc-div {
+        flex-direction: column;
     }
 }
