--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,7 @@ img {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     display: flex;
     align-items: center;
-    font-weight: 400px;
+    font-weight: 400в;
 }
 
 a::after {
@@ -62,6 +62,7 @@ a::after {
 
 .ul-adress {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .nav {
@@ -404,13 +405,12 @@ a::after {
 
 .footer {
     background-color: #2e2f42;
-    padding: 100px 0;
     align-items: center;
     justify-content: space-between;
     display: flex;
     width: 100%;
     margin: 0 auto;
-    padding: 0 15px 0 15px;
+
 }
 
 .p-foot {
@@ -1042,6 +1042,127 @@ input::placeholder {
     display: block;
 }
 
+@media screen and (max-width: 768px) {
+
+    .container {
+        max-width: 800px;
+        padding: 0 16px;
+    }
+
+    .team {
+        max-width: 768px;
+        display: block;
+    }
+
+    .img {
+        display: none;
+    }
+
+    .container-products {
+        display: none;
+    }
+
+    .list-team {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 24px;
+        padding: 0 92px;
+        flex-wrap: wrap;
+    }
+
+
+
+    .ul-adress {
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+    }
+
+    .menu-item {
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 14px;
+        letter-spacing: 0.48px;
+    }
+
+    .head-div {
+        padding: 16px 16px;
+    }
+
+    .main-img {
+        padding: 112px 104px;
+    }
+
+    .list-tittle {
+        font-size: 36px;
+        font-weight: 700;
+    }
+
+    .listp {
+        font-weight: 500;
+        width: 356px;
+        letter-spacing: 0.32px;
+    }
+
+    .list-products {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .li-prod {
+        width: 356px;
+    }
+
+    .li-team {
+        margin-bottom: 64px;
+    }
+
+    .img-section {
+        padding: 96px 0 120px;
+    }
+
+    .list-custom {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .li-custom {
+        width: 168px;
+        margin-bottom: 72px;
+    }
+
+    .custom {
+        padding: 96px 0;
+    }
+
+    .div-custom {
+        margin: 0;
+    }
+
+    .footer__inner {
+        flex-wrap: wrap;
+        gap: 24px;
+        justify-content: start;
+        padding: 96px 92px;
+    }
+
+    .container-footer {
+        margin-bottom: 72px;
+    }
+
+    .soc-div {
+        margin-bottom: 72px;
+    }
+
+    .adress__list {
+        flex-direction: column;
+        gap: 12px;
+    }
+}
+
 @media screen and (max-width: 428px) {
 
     .burger-btn {
@@ -1079,6 +1200,7 @@ input::placeholder {
         width: 428px;
         height: 432px;
         width: 100%;
+        padding: 0;
     }
 
     .orderservice {
@@ -1128,7 +1250,6 @@ input::placeholder {
         max-width: 428px;
         padding-left: 16px;
         padding-right: 16px;
-        margin-top: 96px;
         align-items: flex-start;
         gap: 8px;
     }
@@ -1144,7 +1265,6 @@ input::placeholder {
         display: list-item;
         text-align: -webkit-match-parent;
         width: 100%;
-        margin-bottom: 74px;
 
     }
 
@@ -1163,8 +1283,10 @@ input::placeholder {
         line-height: 1.5;
         letter-spacing: 0.02em;
         box-sizing: border-box;
-
+        margin: 0;
         display: block;
+        max-width: 396px;
+        width: 100%;
     }
 
     .container-products {
@@ -1179,17 +1301,19 @@ input::placeholder {
     /* team */
 
     .list-team {
-        align-items: center;
+        align-content: center;
         display: flex;
         flex-direction: column;
         gap: 72px 24px;
         margin: auto;
+        padding: 0;
     }
 
     .li-team {
         display: block;
         max-width: 100%;
         height: auto;
+        margin: 0;
     }
 
     /* Customers */
@@ -1200,6 +1324,8 @@ input::placeholder {
         box-sizing: border-box;
         display: block;
     }
+
+
 
     .div-custom {
         margin: 0 auto;
@@ -1221,11 +1347,11 @@ input::placeholder {
     .li-custom {
         flex-basis: calc((100% - 16px) / 2);
         height: 88px;
+        margin: 0;
     }
 
     /* footer */
     .footer {
-        padding: 96px 0;
         box-sizing: border-box;
         display: block;
     }
@@ -1270,41 +1396,10 @@ input::placeholder {
     .is-hidden {
         width: 428px;
     }
-}
 
-@media screen and (max-width: 768px) {
-
-    .container {
-        max-width: 768px;
-    }
-
-    .team {
-        max-width: 768px;
-        display: block;
-    }
-
-    .img {
-        display: none;
-    }
-
-    .container-products {
-        display: none;
-    }
-
-    .list-team {
-        display: inline-flex;
-        padding-bottom: 0px;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 32px;
-    }
-
-    .footer__inner {
-        flex-direction: column;
-    }
-
+    .container-footer,
     .soc-div {
-        flex-direction: column;
+        margin: 0;
     }
+
 }
