--- a/css/styles.css
+++ b/css/styles.css
@@ -674,8 +674,8 @@ a::after {
         0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    width: 408px;
-    height: 584px;
+    max-width: 408px;
+    max-height: 584px;
     padding: 72px 24px 24px 24px;
     box-sizing: inherit;
 }
@@ -944,7 +944,9 @@ input::placeholder {
     top: 0;
     left: 0;
     background-color: #fff;
-    display: none;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+    opacity: 0;
+    transform: translateX(-100%);
 }
 
 
@@ -1390,7 +1392,7 @@ input::placeholder {
     }
 
     .modal {
-        width: 428px;
+        width: 100%;
     }
 
     .is-hidden {
@@ -1402,4 +1404,11 @@ input::placeholder {
         margin: 0;
     }
 
+    .mod-six-butt {
+        margin: 0 auto;
+    }
+
+    .mod {
+        max-height: 620px;
+    }
 }
